--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,7 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13041142.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/06/id13041325-3e7ac0c29ac4e0b20f32a636be330a8c-600x400-1-320x200.jpg"><p align="center">【一线采访】广东疫情严峻 当局严控信息</p></a>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13041142.md#1" title="【一线采访】广东疫情严峻 当局严控信息""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13041325-3e7ac0c29ac4e0b20f32a636be330a8c-600x400-1-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13040834.md#1" title="香港苹果日报25日停运 当天出版百万份告别""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/08/2008100107082188-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13040834.md#1" title="香港苹果日报24日停运 告别26年历史""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/08/2008100107082188-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13040336.md#1" title="普拜会后中共欲联俄抗美 专家：与现实脱节""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13026209-GettyImages-1233484307-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13040115.md#1" title="【首播】专访程晓农：中共前后30年互相否定""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13040125-ttl7day9w5_website-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13040139.md#1" title="44国联署批中共迫害人权 中加联合国论战""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13040276-GettyImages-1233573287-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/21/n13037691.md#1" title="【探索时分】暗剑无人机吓坏美军？吹15年无影""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13037695-6fc0b470d129a5f6a7f2eac0c3335cb1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13038669.md#1" title="谢金河：特斯拉在中国陷入养套杀死亡螺旋""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13000486-GettyImages-1311107771@1200x1200-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/twobjw383/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://twobjw383.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13041142.md#1">【一线采访】广东疫情严峻 当局严控信息</a><br>
-:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13040781.md#1">惠誉下调恒达评级为B 展望为负面</a><br>
-:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13041132.md#1">大陆近期频发地震 四川绵阳发生3.8级地震</a><br>
-:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13041130.md#1">北京倪玉兰遭黑社会骚扰 丈夫被殴打</a><br>
+:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13041046.md#1">“黑寡妇”史嘉蕾乔韩森获颁美国电影贡献奖</a><br>
+:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13041142.md#1">【一线采访】广东疫情严峻 当局严控信息</a><br>
+:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13040781.md#1">惠誉下调中国恒大评级至B 展望为负面</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13041132.md#1">大陆近期频发地震 四川绵阳发生3.8级地震</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13041130.md#1">北京倪玉兰遭黑社会骚扰 丈夫被殴打</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13041200.md#1">美司法部长：将继续打击中共黑客和间谍活动</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13041224.md#1">为了救主人 美国忠狗被有毒的响尾蛇咬伤</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/21/n13037328.md#1">董经纬叛逃？章家敦：若属实 中共或一夜变天</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/21/n13037552.md#1">建党百年陷前所未有困境 中共还能撑多久</a><br>
@@ -36,12 +36,12 @@
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/20/n13035544.md#1">【一线采访】东莞麻涌封镇 当地大学现疫情</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/21/n13035660.md#1">【中共党史】中共配合苏联肢解中国（下）</a><br>
 <br><p align="center"><a href="https://github.com/twobjw383/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
-<a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13039675.md#1">新华社分社副社长陈晓虎身亡 年仅48岁</a><br>
-<a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13040115.md#1">【首播】专访程晓农：中共前后30年互相否定</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13040410.md#1">杨威：崔天凯自行告别 背后有隐情？</a><br>
+<a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13039794.md#1">实验室泄漏是阴谋论？柳叶刀多名科学家改口</a><br>
+<a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13040115.md#1">【首播】专访程晓农：中共前后30年互相否定</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13038305.md#1">【拍案惊奇】比特币成中共死敌 谁放料董外逃？</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13039685.md#1">大陆教授用马克思理论推翻相对论 舆论哗然</a><br>
-<a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13039794.md#1">实验室泄漏是阴谋论？柳叶刀多名科学家改口</a><br>
+<a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13039675.md#1">新华社分社副社长陈晓虎身亡 年仅48岁</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13040055.md#1">中共严打加密货币 比特币跌破3万美元</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/3/n12997170.md#1">【独家】全民遭谎言洗脑 有多少真正跟随</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13040878.md#1">【翻墙必看】分析：崔天凯辞别信揭中共老底</a><br>
@@ -96,14 +96,14 @@
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/18/n13031093.md#1">【拍案惊奇】普京笑答中共武统 让北京失望了？</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/18/n13031730.md#1">【珍言真语】钱志健：袭苹果日报 毁港核心价值</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://114.38.83.184/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 51,854</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://114.26.238.20/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 51,854</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 379,365,996 人
+!共 379,367,109 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041130.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13041152-S__4939779-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041130.md#1">北京倪玉兰遭黑社会骚扰 丈夫被殴打</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037607.md#1">“血艾”致二级残疾 江苏陆晓忠再被看管</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039101.md#1">女儿遭轮奸险被灭口8年不立案 母伸冤被刑拘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038297.md#1">关注中共对新疆香港迫害 联合国官员盼访新疆</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13035705.md#1">吉林警察入室绑架访民 河北官员火车站打人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13035936.md#1">无锡沈爱斌探访病友 遭警方拦截后失联</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040781.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/160329090204100311-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040781.md#1">惠誉下调恒达评级为B 展望为负面</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040545.md#1">深圳一住宅指导价13万拍出45万 引关注</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039969.md#1">大陆假芯片横行 日趋严重 风险转嫁消费者</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039708.md#1">瑞典法院维持对华为5G网络设备的禁令</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038924.md#1">80元游戏卡 大陆拍出8700万天价</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038479.md#1">大陆虚拟货币挖矿时代终结 挖矿机价格减半</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040704.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13040829-2106222354552378-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040704.md#1">立陶宛赠台疫苗 蔡英文以立陶宛语感谢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040571.md#1">依赖中国疫苗的数个国家疫情严峻 警示世界</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040436.md#1">美第七舰队驱逐舰穿越台湾海峡 中共又气炸</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13040255.md#1">美众院外委会主席：中共不是中国</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039918.md#1">四十多国发声明关注新疆香港人权 中共跳脚</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039802.md#1">曾被中共软禁美国球员：减重40磅 不知疫情</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041132.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041132.md#1">大陆近期频发地震 四川绵阳发生3.8级地震</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040876.md#1">因降雨内蒙学校四百余人被困 嫩江现编号洪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039743.md#1">中国多地暴雨频发 黑龙江现50年一遇洪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039352.md#1">打疫苗抽奖送电动车 中共鼓励接种奇招百出</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039190.md#1">福建村民摆酒席时砖墙意外坠落 致9死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039025.md#1">水位上涨迅速 黑龙江呼玛县洪峰将至</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039971.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13039983-GettyImages-1194364822-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039971.md#1">孙杨8年禁赛减为4年3个月 将无缘东京奥运</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039843.md#1">“躺平” T恤、手机壳及车贴等全线下架</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039747.md#1">宁波打桩机砸中轿车两死 死者传为名企老总</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038155.md#1">三退声明精选（2021/06/21）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037294.md#1">电信诈骗侵袭大陆校园 一年卷走学生数十亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037250.md#1">智能手表爆炸 福建一4岁女童被严重烧伤</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13039721-000_98G3TW-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1">中共阻调查武毒所 卢比奥提法案制裁中科院</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029496.md#1">双料港姐邓卓殷完成建筑专业硕士课程</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029029.md#1">【财商天下】土猪拱白菜 励志还是可怕？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13028061.md#1">大陆翻译家许渊冲去世 终年100岁</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/16/n13027003.md#1">吴尊爸爸75岁生日 冻龄外表与儿子像兄弟</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/16/n13026757.md#1">数百中国学生学者疫情初期提前返美 遭美调查</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041130.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13041152-S__4939779-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041130.md#1">北京倪玉兰遭黑社会骚扰 丈夫被殴打</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037607.md#1">“血艾”致二级残疾 江苏陆晓忠再被看管</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039101.md#1">女儿遭轮奸险被灭口8年不立案 母伸冤被刑拘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038297.md#1">关注中共对新疆香港迫害 联合国官员盼访新疆</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13035705.md#1">吉林警察入室绑架访民 河北官员火车站打人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13035936.md#1">无锡沈爱斌探访病友 遭警方拦截后失联</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040781.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/160329090204100311-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040781.md#1">惠誉下调中国恒大评级至B 展望为负面</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040545.md#1">深圳一住宅指导价13万拍出45万 引关注</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039969.md#1">大陆假芯片横行 日趋严重 风险转嫁消费者</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039708.md#1">瑞典法院维持对华为5G网络设备的禁令</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038924.md#1">80元游戏卡 大陆拍出8700万天价</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038479.md#1">大陆虚拟货币挖矿时代终结 挖矿机价格减半</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040704.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13040829-2106222354552378-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040704.md#1">立陶宛赠台疫苗 蔡英文以立陶宛语感谢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040571.md#1">依赖中国疫苗的数个国家疫情严峻 警示世界</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040436.md#1">美第七舰队驱逐舰穿越台湾海峡 中共又气炸</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13040255.md#1">美众院外委会主席：中共不是中国</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039918.md#1">四十多国发声明关注新疆香港人权 中共跳脚</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039802.md#1">曾被中共软禁美国球员：减重40磅 不知疫情</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041132.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041132.md#1">大陆近期频发地震 四川绵阳发生3.8级地震</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040876.md#1">因降雨内蒙学校四百余人被困 嫩江现编号洪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039743.md#1">中国多地暴雨频发 黑龙江现50年一遇洪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039352.md#1">打疫苗抽奖送电动车 中共鼓励接种奇招百出</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039190.md#1">福建村民摆酒席时砖墙意外坠落 致9死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039025.md#1">水位上涨迅速 黑龙江呼玛县洪峰将至</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039971.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13039983-GettyImages-1194364822-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039971.md#1">孙杨8年禁赛减为4年3个月 将无缘东京奥运</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039843.md#1">“躺平” T恤、手机壳及车贴等全线下架</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039747.md#1">宁波打桩机砸中轿车两死 死者传为名企老总</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038155.md#1">三退声明精选（2021/06/21）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037294.md#1">电信诈骗侵袭大陆校园 一年卷走学生数十亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037250.md#1">智能手表爆炸 福建一4岁女童被严重烧伤</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13039721-000_98G3TW-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1">中共阻调查武毒所 卢比奥提法案制裁中科院</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029496.md#1">双料港姐邓卓殷完成建筑专业硕士课程</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029029.md#1">【财商天下】土猪拱白菜 励志还是可怕？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13028061.md#1">大陆翻译家许渊冲去世 终年100岁</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/16/n13027003.md#1">吴尊爸爸75岁生日 冻龄外表与儿子像兄弟</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/16/n13026757.md#1">数百中国学生学者疫情初期提前返美 遭美调查</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/10/n13014000.md#1">【独家】法治还是人治？ 文件曝中共谎言</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/5/4/n12924622.md#1">【独家】起底中共高层力捧的广西柳工</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/1/n12990081.md#1">【独家】维也纳孔子学院成中共渗透桥头堡</a><br>
